--- a/2_Data.Rmd
+++ b/2_Data.Rmd
@@ -22,7 +22,7 @@ The smallest `r spp` tend to occur in the shallower depths (< 200 m) with only l
 
 Length compositions were expanded based upon the stratification and the age data was used as conditional age-at-length data.  The number of tows with length data ranged from 33 in 2006 to 69 in 2015 (Table \ref{tab:NWcombo_Lengths}), where ages were collected for `r spp` in nearly every tow length data were collected (Table \ref{tab:NWcombo_Ages}).  The expanded length frequencies from this survey show an increase in small fish starting in 2010 (Figure \ref{fig:nw_Length}).  The age frequencies provide clear evidence of large year-classes moving through the population from the 1999, 2000, and 2008 recruitments; with early indications of a large 2013 recruitment (Figure \ref{fig:nw_Age}).
 
-The input sample sizes for length and marginal age-composition data for all fishery-independent surveys were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014], which determined that the approximate realized sample size for shelf/slope rockfish species was $2.43*N_{\text{tow}}$.  The effective sample size of conditional-age-at-length data was set at the number of fish at each length by sex and by year (not expanded for fish that were captured but not measured).
+The input sample sizes for length and marginal age-composition data for all fishery-independent surveys were calculated according to Stewart and Hamel [-@stewart_bootstrapping_2014], which determined that the approximate realized sample size for shelf/slope rockfish species was $2.43*N_{\text{tow}}$.  The effective sample size of conditional-age-at-length data was set at the number of fish at each length by sex and by year. The conditional-age-at-length data were not expanded and were binned by according to length, age, sex, and year.
 
 Fish with ages also have an associated length and each type of data have been used in the model. Age data from the NWFSC shelf-slope survey were used as conditional-age-at-length data within the model, which avoids double of the length and age data by explicitly stating the length associatted with each aged fish.  Hence, the length and conditional-age-at-length data from the NWFSC shelf-slope survey were given full weight in likelihood calculations when model fitting. 
 
@@ -39,7 +39,7 @@ Fish with ages also have an associated length and each type of data have been us
 
 ###Alaska Fisheries Science Center (AFSC) Slope Survey 
 
-The AFSC slope survey operated during autumn (October-November) aboard the R/V Miller Freeman. Partial survey coverage of the US west coast occurred during 1988-96 and complete coverage (north of $34^\circ 30^\prime$ S) during 1997, 1999, 2000, and 2001. Only the four years of consistent and complete surveys (1997, 1999, 2000, and 2001) plus 1996, which surveyed north of $43^\circ$ N latitude to the US-Canada border, were used in this assessment.  These same data years were used in the last assessment. The number of tows with length data ranged from 19 in 2000 to 48 in 1996 (Table \ref{tab:AFSC_Lengths}).  Because a large number of positive tows occurred in 1996, it was decided to include that year, which surveyed from $43^\circ$ N latitude to the US-Canada border. Therefore, only tows from $43^\circ$ N latitude to the US-Canada border were used across all year to create and index of abundance.  
+The AFSC slope survey operated during autumn (October-November) aboard the R/V Miller Freeman. Partial survey coverage of the US west coast occurred during 1988-96 and complete coverage (north of $34^\circ 30^\prime$ S) during 1997, 1999, 2000, and 2001. Only the four years of consistent and complete surveys (1997, 1999, 2000, and 2001) plus 1996, which surveyed north of $43^\circ$ N latitude to the US-Canada border, were used in this assessment.  These same data years were used in the last assessment. The number of tows with length data ranged from 19 in 2000 to 48 in 1996 (Table \ref{tab:AFSC_Lengths}).  Because a large number of positive tows occurred in 1996, it was decided to include that year, which surveyed from $43^\circ$ N latitude to the US-Canada border. Therefore, only tows from $43^\circ$ N latitude to the US-Canada border were used across all years to create and index of abundance.  
 
 An index of abundance was estimated based on the data using the VAST delta-GLMM model.  The estimated index of abundance is shown in Table \ref{tab:Index_Summary}.  The stratification and modeling configuration are provided in Table \ref{tab:strata}.  The lognormal distribution with random strata-year had the lowest AIC and was chosen as the final model.  The Q-Q plot does not show any departures from the assumed distribution (Figure \ref{fig:afsc_qq}).  The trend in the indices was generally flat over time.
 
@@ -119,7 +119,7 @@ Input effN = $7.06 * N_{\text{trips}}$ if $N_{\text{fish}}/N_{\text{trips}}$ is 
 
 The fishery fleet observed `r spp` that were generally greater than 30 cm across all years of available data (Figure \ref{fig:Comm_Length}). The fishery fleet age data has clear patterns showing two large cohorts moving through the population near the end of the time-series (Figure \ref{fig:Comm_Age}). Lengths and ages were also available for the at-sea hake fishery and are shown in Figures \ref{fig:ASHOP_Length} and \ref{fig:ASHOP_Age}. 
 
-To avoid double use of the length and age data from individual fish, the length and age data sources were each given 0.50 weight in the likelihood calculations when model fitting.
+To avoid double use of the length and age data from individual fish, the length and age data sources were each given 0.50 weight in the likelihood calculations when model fitting.  This was applied to length and age data from the main fishery and the at-sea hake fishery.
 
 ###Fishery Data Not Included in the Base Model
 Several datasets available from the fishery were explored but not used in the final assessment.
