--- a/BibFile_new.bib
+++ b/BibFile_new.bib
@@ -248,9 +248,7 @@
 
 @book{dick_modeling_2009,
 	title = {Modeling the {Reproductive} {Potential} of {Rockfishes} (\textit{{Sebastes}} {Spp}.).},
-	url = {http://books.google.com/books?hl=en&lr=&id=0d6-3rhfynkC&oi=fnd&pg=PR7&dq=%22Synthesis+of+findings+regarding+the+reproductive%22+%22C:+Linear+interpolation+algorithms%22+%22for+yellowtail+rockfish+(S.+flavidus)%22+%22greater+than+zero,+based+on+the+2-level+relative+fecundity%22+%22A:+Methods+for+data+recovery+from+published%22+&ots=NR0UylgymD&sig=58IaN_a3pJeYTPYVmJ1NYMABmvE},
-	urldate = {2017-02-27},
-	publisher = {ProQuest},
+	publisher = {PhD Thesis, University of Californai at Santa Cruz},
 	author = {Dick, Edward Joseph},
 	year = {2009},
 	file = {Dick Thesis.pdf:C\:\\Users\\Chantel.Wetzel\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\0u2lkieq.default\\zotero\\storage\\WZ6ERGUN\\Dick Thesis.pdf:application/pdf}
@@ -345,9 +343,7 @@
 @article{gunderson_trade-off_1997,
 	title = {Trade-off between reproductive effort and adult survival in oviparous and viviparous fishes},
 	volume = {54},
-	url = {http://www.nrcresearchpress.com/doi/abs/10.1139/f97-019},
 	number = {5},
-	urldate = {2017-02-27},
 	journal = {Canadian Journal of Fisheries and Aquatic Sciences},
 	author = {Gunderson, Donald R.},
 	year = {1997},
@@ -358,8 +354,6 @@
 @article{gunderson_population_1977,
 	title = {Population biology of {Pacific} ocean perch, \textit{{Sebastes} alutus}, stocks in the {WashingtonQueen} {Charlotte} {Sound} region and their response to fishing},
 	volume = {75},
-	url = {http://fishbull.noaa.gov/75-2/gunderson.pdf},
-	urldate = {2017-02-27},
 	journal = {Fishery Bulletin},
 	author = {Gunderson, Donald R.},
 	year = {1977},
@@ -387,8 +381,6 @@
 
 @book{gunderson_distribution_1980,
 	title = {Distribution and abundance of rockfish off {Washington}, {Oregon} and {California} during 1977},
-	url = {http://spo.nmfs.noaa.gov/mfr423-4/mfr423-42.pdf},
-	urldate = {2017-02-28},
 	publisher = {Northwest and Alaska Fisheries Center, National Marine Fisheries Service},
 	author = {Gunderson, Donald Raymond and Sample, Terrance M.},
 	year = {1980},
@@ -480,8 +472,6 @@
 @article{hoenig_empirical_1983,
 	title = {Empirical use of longevity data to estimate mortality rates},
 	volume = {82},
-	url = {http://fishbull.noaa.gov/81-4/hoenig.pdf},
-	urldate = {2017-02-28},
 	journal = {Fishery Bulletin},
 	author = {Hoenig, J. M.},
 	year = {1983},
@@ -569,9 +559,7 @@
 @article{seeb_genetic_1988,
 	title = {Genetic variation and population structure of {Pacific} ocean perch (\textit{{Sebastes} alutus})},
 	volume = {45},
-	url = {http://www.nrcresearchpress.com/doi/abs/10.1139/f88-010},
 	number = {1},
-	urldate = {2017-02-28},
 	journal = {Canadian Journal of Fisheries and Aquatic Sciences},
 	author = {Seeb, Lisa Wishard and Gunderson, Donald R.},
 	year = {1988},
@@ -758,9 +746,7 @@
 @article{rogers_numerical_1992,
 	title = {Numerical definition of groundfish assemblages caught off the coasts of {Oregon} and {Washington} using commercial fishing strategies},
 	volume = {49},
-	url = {http://www.nrcresearchpress.com/doi/abs/10.1139/f92-293},
 	number = {12},
-	urldate = {2017-03-09},
 	journal = {Canadian Journal of Fisheries and Aquatic Sciences},
 	author = {Rogers, Jean Beyer and Pikitch, Ellen K.},
 	year = {1992},
@@ -813,8 +799,6 @@
 @article{mcallister_bayesian_1997,
 	title = {Bayesian stock assessment using catch-age data and the sampling - importance resampling algorithm},
 	volume = {54},
-	url = {http://www.nrcresearchpress.com/doi/pdf/10.1139/f96-285},
-	urldate = {2017-03-10},
 	journal = {Canadian Journal of Fisheries and Aquatic Sciences},
 	author = {McAllister, M. K. and Ianelli, J. N.},
 	year = {1997},
