--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -719,7 +719,7 @@ Year & OFL & ABC & Spawning Output (million eggs) & Relative Depletion (\%) \\
 \caption{Decision table summary of 10-year 
                                              projections beginning in 2019 
                                              for alternate states of nature based on 
-                                             an axis of uncertainty for the base model. The removals in 2018 and 2019 were set at the defined management 
+                                             an axis of uncertainty for the base model. The removals in 2017 and 2018 were set at the defined management 
                                              specification of 281 mt for each year assuming full attainment.
                                              The range of natural mortality values corresponded to the 12.5 and 87.5th quantile
                                              from the uncertainty around final spawning biomass.
@@ -769,7 +769,7 @@ Year & OFL & ABC & Spawning Output (million eggs) & Relative Depletion (\%) \\
 \subsection*{Research and Data Needs}\label{research-and-data-needs}
 \addcontentsline{toc}{subsection}{Research and Data Needs}
 
-There are many areas of research that could be undertaked to benefit the
+There are many areas of research that could be undertaken to benefit the
 understanding and assessment of Pacific ocean perch. Below, are issues
 that are considered of importance.
 
@@ -1086,8 +1086,8 @@ Hamel (\protect\hyperlink{ref-stewart_bootstrapping_2014}{2014}), which
 determined that the approximate realized sample size for shelf/slope
 rockfish species was \(2.43*N_{\text{tow}}\). The effective sample size
 of conditional-age-at-length data was set at the number of fish at each
-length by sex and by year (not expanded for fish that were captured but
-not measured).
+length by sex and by year. The conditional-age-at-length data were not
+expanded and were binned by according to length, age, sex, and year.
 
 Fish with ages also have an associated length and each type of data have
 been used in the model. Age data from the NWFSC shelf-slope survey were
@@ -1154,7 +1154,7 @@ ranged from 19 in 2000 to 48 in 1996 (Table \ref{tab:AFSC_Lengths}).
 Because a large number of positive tows occurred in 1996, it was decided
 to include that year, which surveyed from \(43^\circ\) N latitude to the
 US-Canada border. Therefore, only tows from \(43^\circ\) N latitude to
-the US-Canada border were used across all year to create and index of
+the US-Canada border were used across all years to create and index of
 abundance.
 
 An index of abundance was estimated based on the data using the VAST
@@ -1430,7 +1430,8 @@ available for the at-sea hake fishery and are shown in Figures
 
 To avoid double use of the length and age data from individual fish, the
 length and age data sources were each given 0.50 weight in the
-likelihood calculations when model fitting.
+likelihood calculations when model fitting. This was applied to length
+and age data from the main fishery and the at-sea hake fishery.
 
 \subsubsection{Fishery Data Not Included in the Base
 Model}\label{fishery-data-not-included-in-the-base-model}
@@ -1879,7 +1880,7 @@ expected (i.e.~arithmetic mean) ending spawning output was calculated
 and the steepness value most closely associated with the expected value
 was identified. The steepness value of 0.50 most closely corresponded
 with the expected spawning output and was used in the final base model.
-The previous assessment fixed steepness equal to 0.40 based on
+The previous assessment fixed steepness equal to 0.40 based on a
 likelihood profile that had a minimum near 0.40. The current data and
 model structure are not informative regarding steepness. This change in
 perception is likely due to the observation of large recruitment events
@@ -2160,7 +2161,7 @@ evaluated to determine which West Coast species were well sampled.
 However, the treatment of keeping the data set as a single time-series
 or splitting into early or late periods may need to be considered on a
 species specific level. Changes in sampling range and timing may not
-impact or may have differeing levels of impact for West Coast species.}
+impact or may have differing levels of impact for West Coast species.}
 
 Recommendation: Explore the assumption that conditional age-at-length
 data are random samples of the age-composition.
@@ -2524,10 +2525,10 @@ scale of the spawning population was basically unchanged for all of
 these retrospectives. The estimation of the 2008 recruitment deviation
 decreased as more data were removed. Overall, no alarming patterns were
 present in the retrospective analysis. However, the retrospective
-pattern reflects the influence nature of the 2016 data which increases
+pattern reflects the influential nature of the 2016 data which increases
 initial stock size and the increase in biomass in recent years.
 
-\subsubsection{Historic Analysis}\label{historic-analysis}
+\subsubsection{Historical Analysis}\label{historical-analysis}
 
 The estimated 3+ summary biomass from previous assessments since 2000 is
 shown in Figure \ref{fig:historical_analysis}. The current assessment
@@ -4020,7 +4021,7 @@ Year & OFL (mt) & ACL (mt) & Spawning Output & Depletion (\%) \\
 \caption{Decision table summary of 10-year 
                                              projections beginning in 2019 
                                              for alternate states of nature based on 
-                                             an axis of uncertainty for the base model. The removals in 2018 and 2019 
+                                             an axis of uncertainty for the base model. The removals in 2017 and 2018 
                                              were set at the defined management specification of 281 mt for each year assuming full attainment.
                                              Columns range over low, mid, and high
                                              states of nature over natural mortality, and rows range over different 
@@ -5250,31 +5251,32 @@ additional model exploration be done and reviewed at the SSC Groundfish
 Subcommittee (GFSC) September 28, 2017 meeting regarding steepness and
 re-examining the information provided by the Triennial shelf survey.
 
-Preliminary models included the Triennial shelf survey but was removed
-from the final base model during the STAR panel due to model lack of fit
-to this data-set which was in contrast to all other available data and
-concerns that this survey did not sample a representative subset of the
-population off the US west coast. Additionally, the estimates of
-spawning output and depletion with and without the Triennial survey
-data, given the value of steepness, were negligible indicating that the
-other sources of information were the more influential data in the
-model. However, profiles over steepness from preliminary models which
-included the Triennial shelf survey indicated that the index of
-abundance supported low steepness values (there was no information from
-the length or age composition data). The perceived information regarding
-steepness from this index of abundance is due to a change in the
-abundance index between the first two data points of the survey, 1980
-and 1983, which are higher than the subsequent years that drop to lower
-abundance levels from 1986 to 2004 (final year of the survey). A profile
-over steepness values when the Triennial shelf survey was used as a
-single time-series resulted in a profile that had a local minimum at
-0.75 with global minimum occurring at a steepness value of 0.27 (Figure
-\ref{fig:Tri_Profile}). The estimated stock status when assuming a
-steepness value of 0.27, a value that is far lower than any other
-estimated steepness value for a US west coast groundfish stock, was less
-that 10\% of the unfished spawning output in 2017. The STAT team and the
-SSC GFSC agreed that this was not a plausible based upon other estimated
-steepness values from US west coast groundfish.
+Preliminary models included the Triennial shelf survey but it was
+removed from the final base model during the STAR panel due to model
+lack of fit to this data-set which was in contrast to all other
+available data and concerns that this survey did not sample a
+representative subset of the population off the US west coast.
+Additionally, the estimates of spawning output and depletion with and
+without the Triennial survey data, given the value of steepness, were
+negligible indicating that the other sources of information were the
+more influential data in the model. However, profiles over steepness
+from preliminary models which included the Triennial shelf survey
+indicated that the index of abundance supported low steepness values
+(there was no information from the length or age composition data). The
+perceived information regarding steepness from this index of abundance
+is due to a change in the abundance index between the first two data
+points of the survey, 1980 and 1983, which are higher than the
+subsequent years that drop to lower abundance levels from 1986 to 2004
+(final year of the survey). A profile over steepness values when the
+Triennial shelf survey was used as a single time-series resulted in a
+profile that had a local minimum at 0.75 with global minimum occurring
+at a steepness value of 0.27 (Figure \ref{fig:Tri_Profile}). The
+estimated stock status when assuming a steepness value of 0.27, a value
+that is far lower than any other estimated steepness value for a US west
+coast groundfish stock, was less that 10\% of the unfished spawning
+output in 2017. The STAT team and the SSC GFSC agreed that this was not
+a plausible based upon other estimated steepness values from US west
+coast groundfish.
 
 The models explored regarding steepness either using the mean of the
 prior or the value supported by the Triennial shelf survey index led to
@@ -5365,9 +5367,8 @@ of fecundity in rockfishes (genus \emph{Sebastes}). Fisheries Research
 
 \hypertarget{ref-dick_modeling_2009}{}
 Dick, E.J. 2009. Modeling the Reproductive Potential of Rockfishes
-(\emph{Sebastes} Spp.). ProQuest. Available from
-\url{http://books.google.com/books?hl=en\&lr=\&id=0d6-3rhfynkC\&oi=fnd\&pg=PR7\&dq=\%22Synthesis+of+findings+regarding+the+reproductive\%22+\%22C:+Linear+interpolation+algorithms\%22+\%22for+yellowtail+rockfish+(S.+flavidus)\%22+\%22greater+than+zero,+based+on+the+2-level+relative+fecundity\%22+\%22A:+Methods+for+data+recovery+from+published\%22+\&ots=NR0UylgymD\&sig=58IaN_a3pJeYTPYVmJ1NYMABmvE}
-{[}accessed 27 February 2017{]}.
+(\emph{Sebastes} Spp.). PhD Thesis, University of Californai at Santa
+Cruz.
 
 \hypertarget{ref-edwards_pacific_2014}{}
 Edwards, A., Haigh, R., and Starr, P.J. 2014. Pacific Ocean Perch (
@@ -5395,9 +5396,7 @@ Suite 200, Portland, OR 97220.
 Gunderson, D.R. 1977. Population biology of Pacific ocean perch,
 \emph{Sebastes alutus}, stocks in the WashingtonQueen Charlotte Sound
 region and their response to fishing. Fishery Bulletin \textbf{75}:
-369--403. Available from
-\url{http://fishbull.noaa.gov/75-2/gunderson.pdf} {[}accessed 27
-February 2017{]}.
+369--403.
 
 \hypertarget{ref-gunderson_results_1978}{}
 Gunderson, D.R. 1978. Results of cohort analysis for Pacific ocean perch
@@ -5415,16 +5414,12 @@ Management Council, 7700 Ambassador Place NE, Suite 200, Portland, OR
 \hypertarget{ref-gunderson_trade-off_1997}{}
 Gunderson, D.R. 1997. Trade-off between reproductive effort and adult
 survival in oviparous and viviparous fishes. Canadian Journal of
-Fisheries and Aquatic Sciences \textbf{54}(5): 990--998. Available from
-\url{http://www.nrcresearchpress.com/doi/abs/10.1139/f97-019}
-{[}accessed 27 February 2017{]}.
+Fisheries and Aquatic Sciences \textbf{54}(5): 990--998.
 
 \hypertarget{ref-gunderson_distribution_1980}{}
 Gunderson, D.R., and Sample, T.M. 1980. Distribution and abundance of
 rockfish off Washington, Oregon and California during 1977. Northwest;
-Alaska Fisheries Center, National Marine Fisheries Service. Available
-from \url{http://spo.nmfs.noaa.gov/mfr423-4/mfr423-42.pdf} {[}accessed
-28 February 2017{]}.
+Alaska Fisheries Center, National Marine Fisheries Service.
 
 \hypertarget{ref-gunderson_status_1977}{}
 Gunderson, D.R., Westrheim, S., Demory, R., and Fraidenburg, M. 1977.
@@ -5469,9 +5464,7 @@ Council, 7700 Ambassador Place NE, Suite 200, Portland, OR 97220.
 
 \hypertarget{ref-hoenig_empirical_1983}{}
 Hoenig, J.M. 1983. Empirical use of longevity data to estimate mortality
-rates. Fishery Bulletin \textbf{82}: 898--903. Available from
-\url{http://fishbull.noaa.gov/81-4/hoenig.pdf} {[}accessed 28 February
-2017{]}.
+rates. Fishery Bulletin \textbf{82}: 898--903.
 
 \hypertarget{ref-ianelli_status_1998}{}
 Ianelli, J.N., and Zimmermann, M. 1998. Status and future prospects for
@@ -5499,9 +5492,7 @@ Statistical Software \textbf{70}: 1--21.
 McAllister, M.K., and Ianelli, J.N. 1997. Bayesian stock assessment
 using catch-age data and the sampling - importance resampling algorithm.
 Canadian Journal of Fisheries and Aquatic Sciences \textbf{54}:
-284--300. Available from
-\url{http://www.nrcresearchpress.com/doi/pdf/10.1139/f96-285}
-{[}accessed 10 March 2017{]}.
+284--300.
 
 \hypertarget{ref-mccoy_predicting_2008}{}
 McCoy, M.W., and Gillooly, J.F. 2008. Predicting natural mortality rates
@@ -5551,17 +5542,12 @@ Oregon, and California, U.S.A. in 1965-1976. Unpublished document.
 Rogers, J.B., and Pikitch, E.K. 1992. Numerical definition of groundfish
 assemblages caught off the coasts of Oregon and Washington using
 commercial fishing strategies. Canadian Journal of Fisheries and Aquatic
-Sciences \textbf{49}(12): 2648--2656. Available from
-\url{http://www.nrcresearchpress.com/doi/abs/10.1139/f92-293}
-{[}accessed 9 March 2017{]}.
+Sciences \textbf{49}(12): 2648--2656.
 
 \hypertarget{ref-seeb_genetic_1988}{}
 Seeb, L.W., and Gunderson, D.R. 1988. Genetic variation and population
 structure of Pacific ocean perch (\emph{Sebastes alutus}). Canadian
 Journal of Fisheries and Aquatic Sciences \textbf{45}(1): 78--88.
-Available from
-\url{http://www.nrcresearchpress.com/doi/abs/10.1139/f88-010}
-{[}accessed 28 February 2017{]}.
 
 \hypertarget{ref-stewart_bootstrapping_2014}{}
 Stewart, I.J., and Hamel, O.S. 2014. Bootstrapping of sample sizes for
