--- a/10_Appendices.Rmd
+++ b/10_Appendices.Rmd
@@ -231,7 +231,7 @@ print(Fish_Length.table,
 
 The `r spp` base model is highly sensitive to steepness.  In the final base model the profile over steepness is flat across a wide range of potential values.  The flat profile over steepness was in contrast to the  previous assessment model from 2011 where the likelihood was minimized at a value of 0.40.  The change in perceived information regarding steepness between this and the last assessment is due to the new data since 2011, the updated data weighting approach, and minor changes in model structure.  Given the lack of information regarding steepness, preliminary models explored using the mean of the 2017 steepness prior, the approach endorsed by the SSC when there is not information regarding steepness for a specific stock.  However, using the steepness prior of 0.72 resulted in `r spp` being estimated near unfished conditions, a result that was in strong contrast to the previous assessment which estimated the stock size at 19.1% of unfished stock size in 2011.  Due to concerns of plausibility, the STAT team presented an initial model to the STAR panel for review using an intermediate steepness value of 0.50.  This value was selected because the resulting spawning output was encapsulated within the uncertainty from when steepness was assumed to be 0.40, the previous assessment value, and 0.72, the current mean of the steepness prior.  Over the course of the week of the STAR panel after many discussions both the STAR panel and the STAT team agreed that in the absence of information regarding steepness the base model should use the mean of the prior.  However, upon review by the SSC, it was concluded that the results of the assessment model were implausible when the steepness prior of 0.72 was used.  In particular, the value of catchability for `r spp` from the NWFSC shelf-slope survey was 0.05, far below that for other rockfish species observed off the US west coast.  The SSC requested additional model exploration be done and reviewed at the SSC Groundfish Subcommittee (GFSC) September 28, 2017 meeting regarding steepness and re-examining the information provided by the Triennial shelf survey.   
 
-Preliminary models included the Triennial shelf survey but was removed from the final base model during the STAR panel due to model lack of fit to this data-set which was in contrast to all other available data and concerns that this survey did not sample a representative subset of the population off the US west coast.  Additionally, the estimates of spawning output and depletion with and without the Triennial survey data, given the value of steepness, were negligible indicating that the other sources of information were the more influential data in the model.  However, profiles over steepness from preliminary models which included the Triennial shelf survey indicated that the index of abundance supported low steepness values (there was no information from the length or age composition data). The perceived information regarding steepness from this index of abundance is due to a change in the abundance index between the first two data points of the survey, 1980 and 1983, which are higher than the subsequent years that drop to lower abundance levels from 1986 to 2004 (final year of the survey).  A profile over steepness values when the Triennial shelf survey was used as a single time-series resulted in a profile that had a local minimum at 0.75 with global minimum occurring at a steepness value of 0.27 (Figure \ref{fig:Tri_Profile}).  The estimated stock status when assuming a steepness value of 0.27, a value that is far lower than any other estimated steepness value for a US west coast groundfish stock, was less that 10% of the unfished spawning output in 2017.  The STAT team and the SSC GFSC agreed that this was not a plausible based upon other estimated steepness values from US west coast groundfish.  
+Preliminary models included the Triennial shelf survey but it was removed from the final base model during the STAR panel due to model lack of fit to this data-set which was in contrast to all other available data and concerns that this survey did not sample a representative subset of the population off the US west coast.  Additionally, the estimates of spawning output and depletion with and without the Triennial survey data, given the value of steepness, were negligible indicating that the other sources of information were the more influential data in the model.  However, profiles over steepness from preliminary models which included the Triennial shelf survey indicated that the index of abundance supported low steepness values (there was no information from the length or age composition data). The perceived information regarding steepness from this index of abundance is due to a change in the abundance index between the first two data points of the survey, 1980 and 1983, which are higher than the subsequent years that drop to lower abundance levels from 1986 to 2004 (final year of the survey).  A profile over steepness values when the Triennial shelf survey was used as a single time-series resulted in a profile that had a local minimum at 0.75 with global minimum occurring at a steepness value of 0.27 (Figure \ref{fig:Tri_Profile}).  The estimated stock status when assuming a steepness value of 0.27, a value that is far lower than any other estimated steepness value for a US west coast groundfish stock, was less that 10% of the unfished spawning output in 2017.  The STAT team and the SSC GFSC agreed that this was not a plausible based upon other estimated steepness values from US west coast groundfish.  
 
 The models explored regarding steepness either using the mean of the prior or the value supported by the Triennial shelf survey index led to quite different estimates of depletion for `r spp` in 2017.  Given the insufficient information to estimate steepness within the model an alternative approach for determining steepness was proposed by Dr. Owen Hamel during the SSC GFSC webinar held on September 28, 2017.  The subcommittee notes state:
 
