--- a/3_Assessment.Rmd
+++ b/3_Assessment.Rmd
@@ -50,7 +50,7 @@ The STAT team used Stock Synthesis version 3.30.03.05 developed by Dr. Richard M
 ###Priors
 A prior distribution was developed for natural mortality ($M$) from an analysis based on an assumed maximum age of 100 years. The analysis was performed by Owen Hamel (personal communications, NWFSC, NOAA) and used data from Then et al. [-@then_evaluating_2015] to provide a lognormal distribution for natural mortality. The lognormal prior has a median of 0.054 and a standard error of 0.438. 
 
-The prior for steepness ($h$) assumed a beta distribution with parameters based on an update of the Thorson-Dorn rockfish prior (commonly used in past West Coast rockfish assessments) conducted by James Thorson (personal communication, NWFSC, NOAA) which was reviewed and endorsed by the Scientific and Statistical Committee (SSC) in 2017. The prior is a beta distribution with $\mu$=0.72 and $\sigma$=0.15.  However, fixing steepness at 0.72 within the model resulted in a catchability coefficient for the NWFSC shelf-slope survey that was deemed to be implausibly low. The Groundfish Subcommittee of the SSC (GFSC) recommended determining a fixed value for steepness by a process of model averaging (see Appendix D, section \ref{appendix-d.-ssc-groundfish-subcommittee-discussion-regarding-steepness} for GFSC comments). Spawning output was calculated across a range of steepness values (0.25-0.95) which were considered equally likely. The expected (i.e. arithmetic mean) ending spawning output was calculated and the steepness value most closely associated with the expected value was identified.  The steepness value of 0.50 most closely corresponded with the expected spawning output and was used in the final base model. The previous assessment fixed steepness equal to 0.40 based on likelihood profile that had a minimum near 0.40.  The current data and model structure are not informative regarding steepness.  This change in perception is likely due to the observation of large recruitment events in this assessment, updated data weighting approaches, and varying model specifications between the 2011 and the current model.
+The prior for steepness ($h$) assumed a beta distribution with parameters based on an update of the Thorson-Dorn rockfish prior (commonly used in past West Coast rockfish assessments) conducted by James Thorson (personal communication, NWFSC, NOAA) which was reviewed and endorsed by the Scientific and Statistical Committee (SSC) in 2017. The prior is a beta distribution with $\mu$=0.72 and $\sigma$=0.15.  However, fixing steepness at 0.72 within the model resulted in a catchability coefficient for the NWFSC shelf-slope survey that was deemed to be implausibly low. The Groundfish Subcommittee of the SSC (GFSC) recommended determining a fixed value for steepness by a process of model averaging (see Appendix D, section \ref{appendix-d.-ssc-groundfish-subcommittee-discussion-regarding-steepness} for GFSC comments). Spawning output was calculated across a range of steepness values (0.25-0.95) which were considered equally likely. The expected (i.e. arithmetic mean) ending spawning output was calculated and the steepness value most closely associated with the expected value was identified.  The steepness value of 0.50 most closely corresponded with the expected spawning output and was used in the final base model. The previous assessment fixed steepness equal to 0.40 based on a likelihood profile that had a minimum near 0.40.  The current data and model structure are not informative regarding steepness.  This change in perception is likely due to the observation of large recruitment events in this assessment, updated data weighting approaches, and varying model specifications between the 2011 and the current model.
 
 ###Data Weighting
 
@@ -133,7 +133,7 @@ Additionally, a number of general recommendations were made for all West Coast a
 
 Recommendation: Comprehensively evaluate the appropriateness of using the Triennial survey in assessments for other rockfish species and whether the survey should be split into early and late segments. The lingcod assessment reviewed during this STAR split the Triennial survey into separate early and late surveys, whereas the draft `r spp` assessment brought to the STAR had a single Triennial survey.
 
-*STAT response: We agree.  As a whole this dataset should be evaluated to determine which West Coast species were well sampled. However, the treatment of keeping the data set as a single time-series or splitting into early or late periods may need to be considered on a species specific level.  Changes in sampling range and timing may not impact or may have differeing levels of impact for West Coast species.*
+*STAT response: We agree.  As a whole this dataset should be evaluated to determine which West Coast species were well sampled. However, the treatment of keeping the data set as a single time-series or splitting into early or late periods may need to be considered on a species specific level.  Changes in sampling range and timing may not impact or may have differing levels of impact for West Coast species.*
 
 Recommendation: Explore the assumption that conditional age-at-length data are random samples of the age-composition.
 
@@ -239,9 +239,9 @@ The sensitivities that explored the inclusion of the CPUE index, the 2011 maturi
 
 ###Retrospective Analysis
 
-A 5-year retrospective analysis was conducted by running the model using data only through 2011, 2012, 2013, 2014, and 2015, progressively (Figure \ref{fig:retro_sb} and \ref{fig:retro_recdev}). The initial scale of the spawning population was basically unchanged for all of these retrospectives. The estimation of the 2008 recruitment deviation decreased as more data were removed.  Overall, no alarming patterns were present in the retrospective analysis.  However, the retrospective pattern reflects the influence nature of the 2016 data which increases initial stock size and the increase in biomass in recent years.
+A 5-year retrospective analysis was conducted by running the model using data only through 2011, 2012, 2013, 2014, and 2015, progressively (Figure \ref{fig:retro_sb} and \ref{fig:retro_recdev}). The initial scale of the spawning population was basically unchanged for all of these retrospectives. The estimation of the 2008 recruitment deviation decreased as more data were removed.  Overall, no alarming patterns were present in the retrospective analysis.  However, the retrospective pattern reflects the influential nature of the 2016 data which increases initial stock size and the increase in biomass in recent years.
 
-###Historic Analysis
+###Historical Analysis
 The estimated 3+ summary biomass from previous assessments since 2000 is shown in Figure \ref{fig:historical_analysis}.  The current assessment estimated an increase in initial summary biomass compared to previous assessments.  Additionally, the composition data included in the 2017 assessment showing strong 2008 and 2013 year classes drives a sharp increase of biomass at the end of the time-series.  
 
 
