Added ASHOP section

--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -1398,6 +1398,8 @@ varied by year, with larger fish being discarded prior to 2011 (Figure
 \subsubsection{Fishery Length and Age
 Data}\label{fishery-length-and-age-data}
 
+\paragraph{Commercial Fishery}\label{commercial-fishery}
+
 Biological data from commercial fisheries that caught Pacific ocean
 perch were extracted from PacFIN on May 4, 2017. Lengths taken during
 port sampling in Oregon and Washington were used to calculate length and
@@ -1430,8 +1432,19 @@ available for the at-sea hake fishery and are shown in Figures
 
 To avoid double use of the length and age data from individual fish, the
 length and age data sources were each given 0.50 weight in the
-likelihood calculations when model fitting. This was applied to length
-and age data from the main fishery and the at-sea hake fishery.
+likelihood calculations when model fitting.
+
+\paragraph{At-Sea Hake Fishery}\label{at-sea-hake-fishery}
+
+Available biological data from the at-sea hake fishery were included in
+the assessment. Length data were available from 2003-2016 (Table
+\ref{tab:ASHOP_Lengths}) with annual sample sizes ranging from a low of
+63 in 2009 to a high of 470 in 2007. Age data were available from 2003,
+2006, 2007, and 2014 (Table \ref{tab:ASHOP_Ages}). Sample sizes were
+calculated based on the equation described above in Section
+\ref{commercial-fishery}. To avoid double use of the length and age data
+from individual fish, the length and age data sources were each given
+0.50 weight in the likelihood calculations when model fitting.
 
 \subsubsection{Fishery Data Not Included in the Base
 Model}\label{fishery-data-not-included-in-the-base-model}
