--- a/2_Data.Rmd
+++ b/2_Data.Rmd
@@ -107,6 +107,8 @@ The second source is from the West Coast Groundfish Observer Program (WCGOP).  T
  
 
 ###Fishery Length and Age Data
+
+####Commercial Fishery
 Biological data from commercial fisheries that caught `r spp` were extracted from PacFIN on May 4, 2017.  Lengths taken during port sampling in Oregon and Washington were used to calculate length and age compositions.  There were no biological data from California for `r spp` available within PacFIN or CALCOM databases.  The overwhelming majority of these data were collected from the mid-water and bottom trawl gear, but additional biological data were collected from non-trawl gear which was grouped together with trawl gear data. Tables \ref{tab:Comm_Lengths} and \ref{tab:Comm_Ages} show the number of trips and fish sampled, along with the calculated sample sizes.  Length and age data were acquired at the trip level and then aggregated to the state level.  The input sample sizes were calculated via the Stewart method (Ian Stewart, personal communication, IPHC):
 
 \begin{centering}
@@ -119,7 +121,10 @@ Input effN = $7.06 * N_{\text{trips}}$ if $N_{\text{fish}}/N_{\text{trips}}$ is 
 
 The fishery fleet observed `r spp` that were generally greater than 30 cm across all years of available data (Figure \ref{fig:Comm_Length}). The fishery fleet age data has clear patterns showing two large cohorts moving through the population near the end of the time-series (Figure \ref{fig:Comm_Age}). Lengths and ages were also available for the at-sea hake fishery and are shown in Figures \ref{fig:ASHOP_Length} and \ref{fig:ASHOP_Age}. 
 
-To avoid double use of the length and age data from individual fish, the length and age data sources were each given 0.50 weight in the likelihood calculations when model fitting.  This was applied to length and age data from the main fishery and the at-sea hake fishery.
+To avoid double use of the length and age data from individual fish, the length and age data sources were each given 0.50 weight in the likelihood calculations when model fitting.  
+
+####At-Sea Hake Fishery
+Available biological data from the at-sea hake fishery were included in the assessment.  Length data were available from 2003-2016 (Table \ref{tab:ASHOP_Lengths}) with annual sample sizes ranging from a low of 63 in 2009 to a high of 470 in 2007.  Age data were available from 2003, 2006, 2007, and 2014 (Table \ref{tab:ASHOP_Ages}). Sample sizes were calculated based on the equation described above in Section \ref{commercial-fishery}. To avoid double use of the length and age data from individual fish, the length and age data sources were each given 0.50 weight in the likelihood calculations when model fitting.  
 
 ###Fishery Data Not Included in the Base Model
 Several datasets available from the fishery were explored but not used in the final assessment.
